--- a/synthetic/syntheticdata_reject.ipynb
+++ b/synthetic/syntheticdata_reject.ipynb
@@ -17,15 +17,12 @@
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
-    "import numpy as np\n",
     "from scipy.stats import multivariate_normal\n",
     "import math\n",
     "import numpy as np, scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "%matplotlib inline\n",
-    "import seaborn as sns\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -35,8 +32,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.autograd import Variable\n",
-    "from tqdm import tqdm_notebook as tqdm\n"
+    "from torch.autograd import Variable\n"
    ]
   },
   {
@@ -872,7 +868,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Confidence \")\n",
     "for i in range(0,4):\n",
     "    print(\"----\")\n",
@@ -899,7 +894,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Oracle \")\n",
     "for i in range(0,4):\n",
     "    print(\"----\")\n",
@@ -926,7 +920,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Madras et al. 2018 \")\n",
     "for i in range(0,4):\n",
     "    print(\"----\")\n",
