synthetic experiments oracle fix, citation update

--- a/synthetic/syntheticdata_reject.ipynb
+++ b/synthetic/syntheticdata_reject.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
     "experimental_data_madras = []\n",
     "experimental_data_ora = []\n",
     "experimental_data_conf = []\n",
-    "trials = 100\n",
+    "trials = 1000\n",
     "for exp in range(0,trials):\n",
     "    d = 10\n",
     "    total_samples = 1000\n",
@@ -818,12 +818,12 @@
     "    experimental_data_conf.append(batch_data)\n",
     "    \n",
     "    # oracle\n",
+    "    net_class = Linear_net(d,2)\n",
+    "    data_x = torch.cat([cluster1, cluster2])\n",
+    "    data_y = torch.cat([cluster1_labels, cluster2_labels])\n",
+    "    run_classifier(net_class, data_x, data_y)\n",
     "    net_rej = Linear_net(d,2)\n",
     "    data_x = torch.cat([cluster1, cluster2, cluster3, cluster4])\n",
-    "    data_y = torch.cat([cluster1_labels, cluster2_labels, cluster3_labels, cluster4_labels])\n",
-    "    #exp_pred = net_exp(data_x)\n",
-    "    #_, exp_pred = torch.max(exp_pred.data, 1)\n",
-    "    #data_y = (exp_pred == data_y)*1\n",
     "    data_y = torch.cat([torch.zeros([len(torch.cat([cluster1,cluster2]))], dtype=torch.long), torch.ones([len(torch.cat([cluster3,cluster4]))], dtype=torch.long)])\n",
     "    run_classifier(net_rej, data_x, data_y)\n",
     "    data_x = torch.cat([cluster1, cluster2, cluster3, cluster4])\n",
@@ -831,11 +831,6 @@
     "    batch_data = test_oracle(net_class, net_exp, net_rej, data_x_test, data_y_test)\n",
     "    experimental_data_ora.append(batch_data)\n",
     "    # madras\n",
-    "    \n",
-    "    #net_exp_sig = Linear_net_sig(d,1)\n",
-    "    #data_x = torch.cat([cluster3, cluster4])\n",
-    "    #data_y = torch.cat([cluster3_labels, cluster4_labels])\n",
-    "    #run_classifier_sig(net_exp_sig, data_x, data_y)\n",
     "    \n",
     "    data_x = torch.cat([cluster1, cluster2, cluster3, cluster4])\n",
     "    data_y = torch.cat([cluster1_labels, cluster2_labels, cluster3_labels, cluster4_labels])\n",
@@ -855,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,9 +859,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results as differences in metrics between our method L_{CE}^0 and Confidence \n",
+      "----\n",
+      "For  coverage\n",
+      "average: -9.44970080441444\n",
+      "std: 26.1481363009945\n",
+      "95 confidence interval: (-11.074758548540856, -7.824643060288026)\n",
+      "----\n",
+      "For system accuracy\n",
+      "average: 4.964516608367035\n",
+      "std: 14.927990971917744\n",
+      "95 confidence interval: (4.036769901912797, 5.892263314821272)\n",
+      "----\n",
+      "For expert accuracy\n",
+      "average: 12.08665307806017\n",
+      "std: 21.028985051133457\n",
+      "95 confidence interval: (10.779741005433284, 13.393565150687056)\n",
+      "----\n",
+      "For classifier accuracy\n",
+      "average: -8.597255724440464\n",
+      "std: 25.03508212692212\n",
+      "95 confidence interval: (-10.153139234335134, -7.041372214545793)\n",
+      "#############################\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Confidence \")\n",
     "for i in range(0,4):\n",
@@ -890,9 +914,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results as differences in metrics between our method L_{CE}^0 and Oracle \n",
+      "----\n",
+      "For  coverage\n",
+      "average: -24.110245541182564\n",
+      "std: 35.369722824352316\n",
+      "95 confidence interval: (-26.30840763280102, -21.912083449564108)\n",
+      "----\n",
+      "For system accuracy\n",
+      "average: -0.3703981108509603\n",
+      "std: 11.921517507942477\n",
+      "95 confidence interval: (-1.111298117069902, 0.37050189536798117)\n",
+      "----\n",
+      "For expert accuracy\n",
+      "average: 30.942450913620412\n",
+      "std: 42.61063692165344\n",
+      "95 confidence interval: (28.294279559662073, 33.59062226757875)\n",
+      "----\n",
+      "For classifier accuracy\n",
+      "average: 25.979455924640014\n",
+      "std: 46.75730845084798\n",
+      "95 confidence interval: (23.073576694170036, 28.885335155109992)\n",
+      "#############################\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Oracle \")\n",
     "for i in range(0,4):\n",
@@ -916,9 +969,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results as differences in metrics between our method L_{CE}^0 and Madras et al. 2018 \n",
+      "----\n",
+      "For  coverage\n",
+      "average: -19.64723876610937\n",
+      "std: 42.35709932318479\n",
+      "95 confidence interval: (-22.279653232728744, -17.014824299489998)\n",
+      "----\n",
+      "For system accuracy\n",
+      "average: 1.2665348733539226\n",
+      "std: 12.848744148286753\n",
+      "95 confidence interval: (0.4680094664139943, 2.0650602802938507)\n",
+      "----\n",
+      "For expert accuracy\n",
+      "average: 28.524199676165804\n",
+      "std: 41.35398812013943\n",
+      "95 confidence interval: (25.954126693848192, 31.094272658483415)\n",
+      "----\n",
+      "For classifier accuracy\n",
+      "average: 33.989139588037396\n",
+      "std: 47.835684281762234\n",
+      "95 confidence interval: (31.016241317474712, 36.962037858600084)\n",
+      "#############################\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Madras et al. 2018 \")\n",
     "for i in range(0,4):\n",
