fixed documentation and hatespeech label encoding

--- a/cifar/cifar10_defer_ours.ipynb
+++ b/cifar/cifar10_defer_ours.ipynb
@@ -333,7 +333,7 @@
     "    The L_{CE} loss implementation for CIFAR\n",
     "    ----\n",
     "    outputs: network outputs\n",
-    "    m: cost of deferring to expert cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
+    "    m: cost of deferring to expert cost of classifier predicting (I_{m =y})\n",
     "    labels: target\n",
     "    m2:  cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
     "    n_classes: number of classes\n",
