--- a/cifar/cifar10h_defer.ipynb
+++ b/cifar/cifar10h_defer.ipynb
@@ -475,7 +475,6 @@
    "outputs": [],
    "source": [
     "def my_CrossEntropyLoss(outputs, labels):\n",
-    "    # m: expert costs, labels: ground truth, n_classes: number of classes\n",
     "    batch_size = outputs.size()[0]            # batch_size\n",
     "    outputs =  - torch.log2(outputs[range(batch_size), labels]+0.00001)   # pick the values corresponding to the labels\n",
     "    return torch.sum(outputs)/batch_size\n",
@@ -866,13 +865,20 @@
    "outputs": [],
    "source": [
     "def reject_CrossEntropyLoss(outputs, m, labels, m2, n_classes):\n",
-    "    # m: expert costs, labels: ground truth, n_classes: number of classes\n",
-    "    batch_size = outputs.size()[0]            # batch_size\n",
+    "    '''\n",
+    "    The L_{CE} loss implementation for CIFAR\n",
+    "    ----\n",
+    "    outputs: network outputs\n",
+    "    m: cost of deferring to expert cost of classifier predicting (I_{m =y})\n",
+    "    labels: target\n",
+    "    m2:  cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
+    "    n_classes: number of classes\n",
+    "    '''\n",
+    "    batch_size = outputs.size()[0]  # batch_size\n",
     "    rc = [n_classes] * batch_size\n",
-    "    rc = torch.tensor(rc)\n",
-    "    #outputs =  - torch.log2(outputs[range(batch_size), labels])   # regular CE\n",
-    "    outputs =  -m*torch.log2( outputs[range(batch_size), rc]) - m2*torch.log2(outputs[range(batch_size), labels])   # pick the values corresponding to the labels\n",
-    "    return torch.sum(outputs)/batch_size\n",
+    "    outputs = -m * torch.log2(outputs[range(batch_size), rc]) - m2 * torch.log2(\n",
+    "        outputs[range(batch_size), labels])  \n",
+    "    return torch.sum(outputs) / batch_size\n",
     "\n",
     "def train_reject(train_loader, model, optimizer, scheduler, epoch, expert_fn, n_classes, alpha):\n",
     "    \"\"\"Train for one epoch on the training set\"\"\"\n",
