--- a/language/hatespeech_defer.ipynb
+++ b/language/hatespeech_defer.ipynb
@@ -141,10 +141,10 @@
     "labeled_data_path = \"data/labeled_data.csv\" # change path if needed\n",
     "\n",
     "TEXT = data.Field(tokenize = 'spacy', batch_first = True)\n",
-    "LABEL = data.LabelField(dtype = torch.long)\n",
-    "EXPERT = data.LabelField(dtype = torch.long)\n",
-    "GROUP = data.LabelField(dtype = torch.long)\n",
-    "EXPERTLABEL = data.LabelField(dtype = torch.long)\n",
+    "LABEL = data.LabelField(dtype = torch.long, sequential=False, use_vocab=False)\n",
+    "EXPERT = data.LabelField(dtype = torch.long,  sequential=False, use_vocab=False)\n",
+    "GROUP = data.LabelField(dtype = torch.long, sequential=False, use_vocab=False)\n",
+    "EXPERTLABEL = data.LabelField(dtype = torch.long, sequential=False, use_vocab=False)\n",
     "\n",
     "fields = [(None, None),(None, None),('expertlabel', EXPERTLABEL),('group', GROUP),('expert', EXPERT),\n",
     "          ('label', LABEL), ('text', TEXT)]\n",
@@ -583,13 +583,13 @@
     "    \"\"\"\n",
     "    max_preds = preds.argmax(dim = 1, keepdim = True) # get the index of the max probability\n",
     "    correct = max_preds.squeeze(1).eq(y)\n",
-    "    return correct.sum() / torch.FloatTensor([y.shape[0]])\n",
+    "    return correct.sum() / torch.FloatTensor([y.shape[0]]).to(device)\n",
     "def reject_CrossEntropyLoss(outputs, m, labels, m2, n_classes):\n",
     "    '''\n",
     "    The L_{CE} loss implementation for hatespeech, identical to CIFAR implementation\n",
     "    ----\n",
     "    outputs: network outputs\n",
-    "    m: cost of deferring to expert cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
+    "    m: cost of deferring to expert cost of classifier predicting (I_{m =y})\n",
     "    labels: target\n",
     "    m2:  cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
     "    n_classes: number of classes\n",
@@ -614,7 +614,7 @@
     "        predictions = model(batch.text)\n",
     "        batch_size = predictions.size()[0]\n",
     "        # get expert predictions and costs \n",
-    "        m = (1 - batch.expert)*1.0\n",
+    "        m = (batch.expert)*1.0 # expert agreement with label: I_{m=y}\n",
     "        m2 = [1] * batch_size\n",
     "        m2 = torch.tensor(m2)\n",
     "        for j in range (0,batch_size):\n",
@@ -628,7 +628,7 @@
     "\n",
     "        loss = reject_CrossEntropyLoss(predictions, m, batch.label, m2, 3)\n",
     "\n",
-    "        acc = categorical_accuracy(predictions, batch.label)\n",
+    "        acc = categorical_accuracy(predictions, batch.label.to(device))\n",
     "        \n",
     "        loss.backward()\n",
     "        \n",
@@ -645,7 +645,7 @@
     "        for batch in iterator:\n",
     "            predictions = model(batch.text)\n",
     "            batch_size = predictions.size()[0]            # batch_size\n",
-    "            m = 1 - batch.expert\n",
+    "            m = batch.expert\n",
     "            m2 = [1] * batch_size\n",
     "            m2 = torch.tensor(m2)\n",
     "            m2 = m2.to(device)\n",
@@ -688,8 +688,8 @@
     "                    correct += (predicted[i] == data.label[i]).item()\n",
     "                    correct_sys += (predicted[i] == data.label[i]).item()\n",
     "                if r==1:\n",
-    "                    exp += 1 - data.expert[i].item()\n",
-    "                    correct_sys += 1 - data.expert[i].item()\n",
+    "                    exp +=  data.expert[i].item()\n",
+    "                    correct_sys += data.expert[i].item()\n",
     "                    exp_total+=1\n",
     "                real_total += 1\n",
     "    cov = str(total) + str(\" out of\") + str(real_total)\n",
@@ -787,10 +787,7 @@
     "\n",
     "        start_time = time.time()\n",
     "        train_loss, train_acc = train_reject(model, train_iterator, optimizer, alpha)\n",
-    "        #train_loss, train_acc = train_reject_bla(model, train_iterator, optimizer)\n",
     "\n",
-    "        #valid_loss, valid_acc = evaluate_reject(model, valid_iterator)\n",
-    "        #print( metrics_print(model,test_iterator))\n",
     "        valid_loss = metrics_print(model,valid_iterator)[1]\n",
     "\n",
     "        end_time = time.time()\n",
@@ -1014,7 +1011,7 @@
    },
    "outputs": [],
    "source": [
-    "N_EPOCHS = 10\n",
+    "N_EPOCHS = 5\n",
     "\n",
     "best_valid_loss = float('inf')\n",
     "\n",
@@ -1133,7 +1130,7 @@
    },
    "outputs": [],
    "source": [
-    "N_EPOCHS = 10\n",
+    "N_EPOCHS = 5\n",
     "\n",
     "best_valid_loss = float('inf')\n",
     "\n",
@@ -1192,7 +1189,7 @@
     "                r_score = 1 - np.max(arr) #outputs_class.data[i][predicted[i].item()].item()\n",
     "                arr_exp = [outputs_exp.data[i][0].item(),outputs_exp.data[i][1].item()]\n",
     "                arr_exp = softmax(arr_exp)\n",
-    "                r_score = r_score - arr_exp[1]\n",
+    "                r_score = r_score - arr_exp[0]\n",
     "                r = 0\n",
     "                if r_score >= 0:\n",
     "                    r = 1\n",
@@ -1201,8 +1198,8 @@
     "                    correct += (predicted[i] == data.label[i]).item()\n",
     "                    correct_sys += (predicted[i] == data.label[i]).item()\n",
     "                if r==1:\n",
-    "                    exp += 1 - data.expert[i].item()\n",
-    "                    correct_sys += 1 - data.expert[i].item()\n",
+    "                    exp +=  data.expert[i].item()\n",
+    "                    correct_sys +=  data.expert[i].item()\n",
     "                    exp_total+=1\n",
     "                real_total += 1\n",
     "    cov = str(total) + str(\" out of\") + str(real_total)\n",
@@ -1230,7 +1227,7 @@
     "                r_score = 1 - np.max(arr) #outputs_class.data[i][predicted[i].item()].item()\n",
     "                arr_exp = [outputs_exp.data[i][0].item(),outputs_exp.data[i][1].item()]\n",
     "                arr_exp = softmax(arr_exp)\n",
-    "                r_score = r_score - arr_exp[1]\n",
+    "                r_score = r_score - arr_exp[0]\n",
     "                r = 0\n",
     "                if r_score >= 0:\n",
     "                    r = 1\n",
@@ -1334,8 +1331,8 @@
     "                    correct += (predicted[i] == data.label[i]).item()\n",
     "                    correct_sys += (predicted[i] == data.label[i]).item()\n",
     "                if r==1:\n",
-    "                    exp += 1 - data.expert[i].item()\n",
-    "                    correct_sys += 1 - data.expert[i].item()\n",
+    "                    exp +=  data.expert[i].item()\n",
+    "                    correct_sys +=  data.expert[i].item()\n",
     "                    exp_total+=1\n",
     "                real_total += 1\n",
     "    cov = str(total) + str(\" out of\") + str(real_total)\n",
@@ -1645,8 +1642,8 @@
     "                    correct += (predicted[i] == data.label[i]).item()\n",
     "                    correct_sys += (predicted[i] == data.label[i]).item()\n",
     "                if r==1:\n",
-    "                    exp += 1 - data.expert[i].item()\n",
-    "                    correct_sys += 1 - data.expert[i].item()\n",
+    "                    exp +=  data.expert[i].item()\n",
+    "                    correct_sys +=  data.expert[i].item()\n",
     "                    exp_total+=1\n",
     "                real_total += 1\n",
     "    cov = str(total) + str(\" out of\") + str(real_total)\n",
