--- a/synthetic/syntheticdata_reject.ipynb
+++ b/synthetic/syntheticdata_reject.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,17 +32,19 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.autograd import Variable\n"
+    "from torch.autograd import Variable\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sample(mu, var, nb_samples=500):\n",
     "    \"\"\"\n",
+    "    sample guassian random variable\n",
     "    :param mu: torch.Tensor (features)\n",
     "    :param var: torch.Tensor (features) (note: zero covariance)\n",
     "    :return: torch.Tensor (nb_samples, features)\n",
@@ -57,12 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "class Linear_net(nn.Module):\n",
+    "    '''\n",
+    "    Linear multiclass classifier with unit init\n",
+    "    '''\n",
     "    def __init__(self, input_dim, out_dim):\n",
     "        super(Linear_net, self).__init__()\n",
     "        # an affine operation: y = Wx + b\n",
@@ -77,7 +82,10 @@
     "\n",
     "    \n",
     "class Linear_net_sig(nn.Module):\n",
-    "    def __init__(self, input_dim, out_dim):\n",
+    "    '''\n",
+    "    Linear binary classifier with unit init\n",
+    "    '''\n",
+    "    def __init__(self, input_dim, out_dim = 1):\n",
     "        super(Linear_net_sig, self).__init__()\n",
     "        # an affine operation: y = Wx + b\n",
     "        self.fc1 = nn.Linear(input_dim, 1)\n",
@@ -106,11 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_classifier(net, data_x, data_y):\n",
+    "    '''\n",
+    "    trains multiclass classifier using SGD\n",
+    "    '''\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(net.parameters(), lr=1, momentum=0)\n",
     "    for epoch in range(50):  # loop over the dataset multiple times\n",
@@ -140,6 +151,9 @@
     "\n",
     "    \n",
     "def run_classifier_sig(net, data_x, data_y):\n",
+    "    '''\n",
+    "    trains binary classifier using SGD\n",
+    "    '''\n",
     "    BCE = torch.nn.BCELoss()\n",
     "    optimizer = optim.SGD(net.parameters(), lr=0.1, momentum=0)\n",
     "    for epoch in range(100):  # loop over the dataset multiple times\n",
@@ -172,6 +186,9 @@
     "    #print('Finished Training')\n",
     "\n",
     "def test_classifier(net, data_x, data_y):\n",
+    "    '''\n",
+    "    tests multiclass classifier and prints accuracy\n",
+    "    '''\n",
     "    correct = 0\n",
     "    total = 0\n",
     "    with torch.no_grad():\n",
@@ -181,9 +198,12 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
-    "    print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
+    "    print('Accuracy of the network on the  test examples: %d %%' % (\n",
     "        100 * correct / total))\n",
     "def test_classifier_sig(net, data_x, data_y):\n",
+    "    '''\n",
+    "    tests binary classifier and prints accuracy\n",
+    "    '''\n",
     "    correct = 0\n",
     "    total = 0\n",
     "    with torch.no_grad():\n",
@@ -195,17 +215,20 @@
     "        for i in range(total):\n",
     "            correct += predicted[i].item() == labels[i].item()\n",
     "        #correct = (predicted == labels).sum()\n",
-    "    print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
+    "    print('Accuracy of the network on the  test examples: %d %%' % (\n",
     "        100 * correct / total))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Linear_net_rej(nn.Module):\n",
+    "    '''\n",
+    "    Linear Classifier to be used for the L_CE loss\n",
+    "    '''\n",
     "    def __init__(self, input_dim, out_dim):\n",
     "        super(Linear_net_rej, self).__init__()\n",
     "        # an affine operation: y = Wx + b\n",
@@ -226,19 +249,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reject_CrossEntropyLoss(outputs, m, labels, m2, n_classes):\n",
-    "    # m: expert costs, labels: ground truth, n_classes: number of classes\n",
+    "    '''\n",
+    "    Implmentation of L_{CE}^{\\alpha}\n",
+    "        outputs: network outputs\n",
+    "        m: cost of deferring to expert cost of classifier predicting (I_{m =y})\n",
+    "        labels: target\n",
+    "        m2:  cost of classifier predicting (alpha* I_{m\\neq y} + I_{m =y})\n",
+    "        n_classes: number of classes\n",
+    "    '''    \n",
     "    batch_size = outputs.size()[0]            # batch_size\n",
     "    rc = [n_classes] * batch_size\n",
     "    rc = torch.tensor(rc)\n",
     "    outputs =  -m*torch.log2( outputs[range(batch_size), rc]) - m2*torch.log2(outputs[range(batch_size), labels])   # pick the values corresponding to the labels\n",
-    "    #outputs =  (1-m)* outputs[range(batch_size), rc] - m2*outputs[range(batch_size), labels]*(1-outputs[range(batch_size), rc])   # pick the values corresponding to the labels\n",
     "    return torch.sum(outputs)/batch_size\n",
     "def run_classifier_rej(net, net_exp, data_x, data_y, alpha):\n",
+    "    '''\n",
+    "    training script for L_{CE}\n",
+    "        net: classifier and rejector model\n",
+    "        net_exp: expert model\n",
+    "        data_x: numpy x data\n",
+    "        data_y: numpy y data\n",
+    "        alpha: hyperparam alpha for loss L_CE^{\\alpha}\n",
+    "    '''\n",
     "    optimizer = optim.SGD(net.parameters(), lr=0.1)\n",
     "    scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, len(data_x)*50)\n",
     "\n",
@@ -289,6 +326,9 @@
     "    #print('Finished Training')\n",
     "\n",
     "def test_classifier_rej(net, net_exp, data_x, data_y):\n",
+    "    '''\n",
+    "    Testing script for L_{CE} loss\n",
+    "    '''\n",
     "    correct = 0\n",
     "    correct_sys = 0\n",
     "    exp = 0\n",
@@ -329,11 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_confidence(net, net_exp, data_x, data_y):\n",
+    "    '''\n",
+    "    Confidence baseline, compares confidence of net and net_exp and rejects accordingly\n",
+    "    '''\n",
     "    correct = 0\n",
     "    correct_sys = 0\n",
     "    exp = 0\n",
@@ -380,11 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_oracle(net_class, net_exp, net_rej, data_x, data_y):\n",
+    "    '''\n",
+    "    Baseline: 2 models, classifier as net_class, rejector as net_rej.\n",
+    "    '''\n",
     "    correct = 0\n",
     "    correct_sys = 0\n",
     "    exp = 0\n",
@@ -427,12 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def sample_gumbel(shape, eps=1e-20):\n",
     "    U = torch.rand(shape)\n",
     "    #U = U.to(device)\n",
@@ -470,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,105 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "BCE = torch.nn.BCELoss()\n",
-    "\n",
-    "def madras_loss_original(outputs, rej, labels, expert,eps = 10e-12):\n",
-    "    # m: expert costs, labels: ground truth, n_classes: number of classes\n",
-    "    batch_size = outputs.size()[0]\n",
-    "    net_loss = -labels*torch.log2(outputs) - (1-labels)*torch.log2(1-outputs) #BCE(outputs, labels)\n",
-    "    exp_loss = -labels*torch.log2(expert) - (1-labels)*torch.log2(1-expert) #BCE(outputs, labels)\n",
-    "    #exp_loss = #BCE(expert,labels)\n",
-    "    gumbel_rej = gumbel_binary_sample(rej)\n",
-    "    system_loss =  (1-rej)  *  net_loss + rej  * exp_loss\n",
-    "    return torch.sum(system_loss)/batch_size\n",
-    "                           \n",
-    "def run_classifier_madras_original(net_class, net_rej, net_exp, data_x, data_y):\n",
-    "    optimizer_class = optim.SGD(net_class.parameters(), lr=0.1)\n",
-    "    optimizer_rej = optim.SGD(net_rej.parameters(), lr=0.1)\n",
-    "\n",
-    "    for epoch in range(30):  # loop over the dataset multiple times\n",
-    "        running_loss = 0.0\n",
-    "        inputs = data_x\n",
-    "        labels = data_y\n",
-    "        order = np.array(range(len(data_x)))\n",
-    "        np.random.shuffle(order)\n",
-    "        # in-place changing of values\n",
-    "        inputs[np.array(range(len(data_x)))] = inputs[order]\n",
-    "        labels[np.array(range(len(data_x)))] = labels[order]\n",
-    "        x_batches = torch.split(inputs,64)\n",
-    "        y_batches = torch.split(labels,64)  \n",
-    "        for inputs, labels in zip(x_batches, y_batches):\n",
-    "\n",
-    "            optimizer_class.zero_grad()\n",
-    "            optimizer_rej.zero_grad()\n",
-    "            \n",
-    "            # forward + backward + optimize\n",
-    "            expert_prediction = net_exp(inputs)\n",
-    "            outputs = net_class(inputs)\n",
-    "            outputs_no_grad = outputs.detach()\n",
-    "\n",
-    "            rej = net_rej(inputs,outputs_no_grad)\n",
-    "            \n",
-    "            loss_rej = madras_loss_original(outputs_no_grad, rej, labels *1.0, expert_prediction)\n",
-    "            loss_rej.backward()\n",
-    "            \n",
-    "            loss_class = BCE(outputs, labels*1.0)\n",
-    "            loss_class.backward()\n",
-    "            \n",
-    "            optimizer_class.step()\n",
-    "            optimizer_rej.step()\n",
-    "            \n",
-    "            running_loss += loss_rej.item()\n",
-    "            #print(\"loss \" + str(loss.item()))\n",
-    "\n",
-    "    #print('Finished Training')\n",
-    "\n",
-    "    \n",
-    "def test_classifier_madras_original(net_class, net_rej, net_exp, data_x, data_y):\n",
-    "    correct = 0\n",
-    "    correct_sys = 0\n",
-    "    exp = 0\n",
-    "    exp_total = 0\n",
-    "    total = 0\n",
-    "    real_total = 0\n",
-    "    alone_correct = 0\n",
-    "    with torch.no_grad():\n",
-    "        inputs =  data_x\n",
-    "        labels = data_y\n",
-    "        m = net_exp(inputs)\n",
-    "        _, predicted_exp = torch.max(m.data, 1)\n",
-    "        outputs = net_class(inputs)\n",
-    "        predicted = torch.round(outputs.data)\n",
-    "        rej = net_rej(inputs, outputs)\n",
-    "        for i in range(len(inputs)):\n",
-    "            r =  (rej[i].item()>=0.5)\n",
-    "            if r:\n",
-    "                exp += (predicted_exp[i] == labels[i]).item()\n",
-    "                correct_sys += (predicted_exp[i] == labels[i]).item()\n",
-    "                exp_total += 1\n",
-    "            else:\n",
-    "                correct += (predicted[i] == labels[i]).item() \n",
-    "                correct_sys += (predicted[i] == labels[i]).item()\n",
-    "                total += 1\n",
-    "            alone_correct += (predicted[i] == labels[i]).item()  \n",
-    "        real_total += labels.size(0)\n",
-    "    cov = str(total) + str(\" out of\") + str(real_total)\n",
-    "    to_print={\"coverage\":cov, \"system accuracy\": 100*correct_sys/real_total, \"expert accuracy\":100* exp/(exp_total+0.0002),\"classifier accuracy\":100*correct/(total+0.0001), \"alone classifier\": 100*alone_correct/real_total }\n",
-    "    print(to_print)\n",
-    "    return [100*total/real_total,  100*correct_sys/real_total, 100* exp/(exp_total+0.0002),100*correct/(total+0.0001) ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "def madras_loss_original(outputs, rej, labels, expert,eps = 10e-12):\n",
     "    # m: expert costs, labels: ground truth, n_classes: number of classes\n",
@@ -707,8 +657,9 @@
     "experimental_data_madras = []\n",
     "experimental_data_ora = []\n",
     "experimental_data_conf = []\n",
-    "trials = 1000\n",
-    "for exp in range(0,trials):\n",
+    "trials = 10\n",
+    "TO_PRINT = False\n",
+    "for exp in tqdm(range(0,trials)):\n",
     "    d = 10\n",
     "    total_samples = 1000\n",
     "    group_proportion = np.random.uniform()\n",
@@ -786,8 +737,9 @@
     "    data_x = torch.cat([cluster3, cluster4])\n",
     "    data_y = torch.cat([cluster3_labels, cluster4_labels])\n",
     "    run_classifier(net_exp, data_x, data_y)\n",
-    "    print(\"EXPERT\")\n",
-    "    print(test_classifier(net_exp,data_x,data_y))\n",
+    "    if TO_PRINT:\n",
+    "        print(\"EXPERT\")\n",
+    "        print(test_classifier(net_exp,data_x,data_y))\n",
     "    #reject\n",
     "    data_x = torch.cat([cluster1, cluster2, cluster3, cluster4])\n",
     "    data_y = torch.cat([cluster1_labels, cluster2_labels, cluster3_labels, cluster4_labels])\n",
@@ -796,7 +748,6 @@
     "    run_classifier_rej(net_rej, net_exp, data_x, data_y, alpha)\n",
     "    batch_data = test_classifier_rej(net_rej, net_exp, data_x_test, data_y_test)\n",
     "    experimental_data_rej0.append(batch_data)\n",
-    "    print(batch_data)\n",
     "    net_rej = Linear_net_rej(d,2)\n",
     "    alpha = 0.5\n",
     "    run_classifier_rej(net_rej, net_exp, data_x, data_y, alpha)\n",
@@ -812,8 +763,9 @@
     "    data_x = torch.cat([cluster1, cluster2, cluster3, cluster4])\n",
     "    data_y = torch.cat([cluster1_labels, cluster2_labels, cluster3_labels, cluster4_labels])\n",
     "    run_classifier(net_class, data_x, data_y)\n",
-    "    print(\"Classifier on all\")\n",
-    "    print(test_classifier(net_exp,data_x,data_y))\n",
+    "    if TO_PRINT:\n",
+    "        print(\"Classifier on all\")\n",
+    "        print(test_classifier(net_exp,data_x,data_y))\n",
     "    batch_data = test_confidence(net_class, net_exp, data_x_test, data_y_test)\n",
     "    experimental_data_conf.append(batch_data)\n",
     "    \n",
@@ -850,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,38 +811,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results as differences in metrics between our method L_{CE}^0 and Confidence \n",
-      "----\n",
-      "For  coverage\n",
-      "average: -9.44970080441444\n",
-      "std: 26.1481363009945\n",
-      "95 confidence interval: (-11.074758548540856, -7.824643060288026)\n",
-      "----\n",
-      "For system accuracy\n",
-      "average: 4.964516608367035\n",
-      "std: 14.927990971917744\n",
-      "95 confidence interval: (4.036769901912797, 5.892263314821272)\n",
-      "----\n",
-      "For expert accuracy\n",
-      "average: 12.08665307806017\n",
-      "std: 21.028985051133457\n",
-      "95 confidence interval: (10.779741005433284, 13.393565150687056)\n",
-      "----\n",
-      "For classifier accuracy\n",
-      "average: -8.597255724440464\n",
-      "std: 25.03508212692212\n",
-      "95 confidence interval: (-10.153139234335134, -7.041372214545793)\n",
-      "#############################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Confidence \")\n",
     "for i in range(0,4):\n",
@@ -914,38 +837,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results as differences in metrics between our method L_{CE}^0 and Oracle \n",
-      "----\n",
-      "For  coverage\n",
-      "average: -24.110245541182564\n",
-      "std: 35.369722824352316\n",
-      "95 confidence interval: (-26.30840763280102, -21.912083449564108)\n",
-      "----\n",
-      "For system accuracy\n",
-      "average: -0.3703981108509603\n",
-      "std: 11.921517507942477\n",
-      "95 confidence interval: (-1.111298117069902, 0.37050189536798117)\n",
-      "----\n",
-      "For expert accuracy\n",
-      "average: 30.942450913620412\n",
-      "std: 42.61063692165344\n",
-      "95 confidence interval: (28.294279559662073, 33.59062226757875)\n",
-      "----\n",
-      "For classifier accuracy\n",
-      "average: 25.979455924640014\n",
-      "std: 46.75730845084798\n",
-      "95 confidence interval: (23.073576694170036, 28.885335155109992)\n",
-      "#############################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Oracle \")\n",
     "for i in range(0,4):\n",
@@ -969,38 +863,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results as differences in metrics between our method L_{CE}^0 and Madras et al. 2018 \n",
-      "----\n",
-      "For  coverage\n",
-      "average: -19.64723876610937\n",
-      "std: 42.35709932318479\n",
-      "95 confidence interval: (-22.279653232728744, -17.014824299489998)\n",
-      "----\n",
-      "For system accuracy\n",
-      "average: 1.2665348733539226\n",
-      "std: 12.848744148286753\n",
-      "95 confidence interval: (0.4680094664139943, 2.0650602802938507)\n",
-      "----\n",
-      "For expert accuracy\n",
-      "average: 28.524199676165804\n",
-      "std: 41.35398812013943\n",
-      "95 confidence interval: (25.954126693848192, 31.094272658483415)\n",
-      "----\n",
-      "For classifier accuracy\n",
-      "average: 33.989139588037396\n",
-      "std: 47.835684281762234\n",
-      "95 confidence interval: (31.016241317474712, 36.962037858600084)\n",
-      "#############################\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Results as differences in metrics between our method L_{CE}^0 and Madras et al. 2018 \")\n",
     "for i in range(0,4):\n",
@@ -1014,13 +879,6 @@
     "    print(\"95 confidence interval: \" + str(st.t.interval(0.95, len(arr)-1, loc=np.mean(arr), scale=st.sem(arr))))\n",
     "print(\"#############################\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
